force-app/main/default/objects/Asset_Odometer_Reading__c/Asset_Odometer_Reading__c.object-meta.xml
<CustomObject>
    <label>Asset Odometer Reading</label>
    <nameField>
        <displayFormat>AOR-{000000}</displayFormat>
        <label>Asset Odometer Reading Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Odometer Readings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>