force-app/main/default/objects/Asset_Odometer_Reading__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset__c</referenceTo>
    <relationshipLabel>Asset Odometer Readings</relationshipLabel>
    <relationshipName>Asset_Odometer_Readings</relationshipName>
    <type>Lookup</type>
</CustomField>