force-app/main/default/objects/Asset_Odometer_Reading__c/fields/Blank_Odometer_Today_formula__c.field-meta.xml
<CustomField>
    <fullName>Blank_Odometer_Today_formula__c</fullName>
    <formula>IF(Odometer_Today__c &gt; 0, FALSE, TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Blank Odometer Today</label>
    <type>Checkbox</type>
</CustomField>