force-app/main/default/objects/Asset_Odometer_Reading__c/fields/Current_Odometer__c.field-meta.xml
<CustomField>
    <fullName>Current_Odometer__c</fullName>
    <label>Current Odometer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>