force-app/main/default/objects/Asset_Odometer_Reading__c/fields/Employees__c.field-meta.xml
<CustomField>
    <fullName>Employees__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employees</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>Asset Odometer Readings</relationshipLabel>
    <relationshipName>Asset_Odometer_Readings</relationshipName>
    <type>Lookup</type>
</CustomField>