force-app/main/default/objects/Asset_Odometer_Reading__c/fields/Odometer_Today__c.field-meta.xml
<CustomField>
    <fullName>Odometer_Today__c</fullName>
    <label>Odometer Today</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>